[package]
name = "s7-event-monitor"
version = "0.0.1"
edition = "2021"

[dependencies]
confy = "1.0.0"
log = "0.4"
env_logger = "0.11.8"
tokio = { version = "1.46.1", features = ["full"] }  # For async TCP server
chrono = "0.4"
rusqlite = { version = "0.36.0", features = ["bundled"] }
quick-xml = { version = "0.37.5", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
floem = { git = "https://github.com/lapce/floem.git", features = ["rfd-async-std", "serde", "vello"] }
winapi = { version = "0.3.9", features = [
    "commctrl",
    "libloaderapi",
    "errhandlingapi",
    "shellapi",
    "winuser",
    "wingdi",
    "winbase",
    "minwindef",
    "windef",
]}
once_cell = "1.21.3"

[features]
vello = ["floem/vello"]