[package]
name = "s7-event-monitor"
version = "0.0.1"
edition = "2021"

[dependencies]
thiserror = "2.0.17"
confy = "2.0.0"
log = "0.4.29"
env_logger = "0.11.8"
tokio = { version = "1.48.0", features = ["full"] }
chrono = "0.4.42"
rusqlite = { version = "0.37.0", features = ["bundled"] }
quick-xml = { version = "0.38.4", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
floem = { git = "https://github.com/lapce/floem.git", features = ["rfd-async-std", "serde", "vello"] }
lazy_static = "1.5.0"
syntect = "5.3.0"
syntect-assets = "0.23.6"
winapi = { version = "0.3.9", features = [
    "winuser",
    "winbase",
    "minwindef",
    "windef",
]}
once_cell = "1.21.3"
im = "15.1.0"
base64 = "0.22.1"

[features]
vello = ["floem/vello"]
